--- a/Inventory/Views/Categories/Index.cshtml
+++ b/Inventory/Views/Categories/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Inventory.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categories";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
