--- a/Inventory/Views/Shared/_Layout.cshtml
+++ b/Inventory/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -10,14 +10,14 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">@ViewData["Title"]</a>
+                <a class="navbar-brand" href="#">Inventory</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
-                        <a class="nav-link" asp-controller="Equipamentos" asp-action="Index">Equipamentos</a>
+                        <a class="nav-link" asp-controller="Categories" asp-action="Index">Categories</a>
                     </div>
                 </div>
             </div>
@@ -27,10 +27,8 @@
         @RenderBody()
     </section>
     <footer class="d-flex text-center justify-content-center fixed-bottom bg-dark text-white">
-        <p>&copy; 2021 - EstoqueMvc</p>
+        <p>&copy; 2021 - Inventory</p>
     </footer>
-    <script src="~/lib/jquery-3.6.0/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap-4.5.3/dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
