--- a/Inventory/Views/Manufacturers/Edit.cshtml
+++ b/Inventory/Views/Manufacturers/Edit.cshtml
@@ -1,5 +1,10 @@
 ﻿@model Inventory.Models.Manufacturer
 
+@{
+    ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <h4>Manufacturer</h4>
 <hr />
 <div class="row">
