--- a/Inventory/Views/Categories/Delete.cshtml
+++ b/Inventory/Views/Categories/Delete.cshtml
@@ -1,5 +1,10 @@
 ﻿@model Inventory.Models.Category
 
+@{
+    ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Category</h4>
