--- a/Inventory/Views/Manufacturers/Delete.cshtml
+++ b/Inventory/Views/Manufacturers/Delete.cshtml
@@ -1,18 +1,23 @@
 ﻿@model Inventory.Models.Manufacturer
 
+@{
+    ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Manufacturer</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="ManufacturerId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
