--- a/Inventory/Views/Manufacturers/Index.cshtml
+++ b/Inventory/Views/Manufacturers/Index.cshtml
@@ -1,5 +1,12 @@
 ﻿@model IEnumerable<Inventory.Models.Manufacturer>
 
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h1>Index</h1>
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -13,17 +20,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ManufacturerId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ManufacturerId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ManufacturerId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ManufacturerId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ManufacturerId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ManufacturerId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
