--- a/Inventory/Views/Categories/Index.cshtml
+++ b/Inventory/Views/Categories/Index.cshtml
@@ -1,12 +1,14 @@
 ﻿@model IEnumerable<Inventory.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "All Categories";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<h1>@ViewData["Title"]</h1>
+
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary text-white" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -25,9 +27,9 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
+                    <a class="btn btn-info" asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
+                    <a class="btn btn-secondary" asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
                 </td>
             </tr>
         }
