--- a/Inventory/Views/Shared/_Layout.cshtml
+++ b/Inventory/Views/Shared/_Layout.cshtml
@@ -5,14 +5,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="~/lib/bootstrap-5.0.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/css/style.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
-<body>
+<body class="container-fluid">
     <div class="container-fluid">
-        <header>
+        <header class="fixed-top">
             <nav class="navbar navbar-expand-lg bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="">Inventory</a>
+                    <a class="navbar-brand" asp-controller="Home">Inventory</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -28,7 +29,7 @@
         <section>
             @RenderBody()
         </section>
-        <footer class="d-flex text-center justify-content-center fixed-bottom bg-dark text-white">
+        <footer class="fixed-bottom bg-dark text-white">
             <p>&copy; 2021 - Inventory</p>
         </footer>
     </div>
