Corrigindo títulos dinâmicos nos partials

--- a/Inventory/Views/Categories/Index.cshtml
+++ b/Inventory/Views/Categories/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Inventory.Models.Category>
 
 @{
-    ViewData["Title"] = "All Categories";
+    ViewData["Title"] = "Categories";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
