--- a/Inventory/Views/Manufacturers/Index.cshtml
+++ b/Inventory/Views/Manufacturers/Index.cshtml
@@ -1,12 +1,11 @@
 ﻿@model IEnumerable<Inventory.Models.Manufacturer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Manufacturers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-
+<h1>@ViewData["Title"]</h1>
 <p>
     <a class="btn btn-primary text-white" asp-action="Create">Create New</a>
 </p>
