--- a/Inventory/Views/Categories/Delete.cshtml
+++ b/Inventory/Views/Categories/Delete.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<h1>@ViewData["Title"]</h1>
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Category</h4>
