--- a/Inventory/Views/Manufacturers/Create.cshtml
+++ b/Inventory/Views/Manufacturers/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h4>Manufacturer</h4>
+<h1>@ViewData["Title"]</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
