--- a/Inventory/Views/Manufacturers/Edit.cshtml
+++ b/Inventory/Views/Manufacturers/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Inventory.Models.Manufacturer
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Manufacturer";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h4>Manufacturer</h4>
+<h1>@ViewData["Title"]</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
