Refatorando a view Details do controlador CategoryController

--- a/Inventory/Views/Categories/Details.cshtml
+++ b/Inventory/Views/Categories/Details.cshtml
@@ -23,3 +23,5 @@
     <a asp-action="Edit" asp-route-id="@Model.CategoryId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+<h2>Others Products</h2>
+@await Html.PartialAsync("~/Views/Products/_ByCategory.cshtml", Model.Products.ToList())
